<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="300dp"
    android:layout_height="400dp"
    android:background="@drawable/answerbgred"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center">
    <LinearLayout
        android:id="@+id/wraptur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">
        <TextView
            android:id="@+id/txtodemetur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:layout_marginEnd="10dp"
            android:text="Bitcoin"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:text="@string/odemesi"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp">
        <EditText
            android:id="@+id/edtodemeisim"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:paddingStart="10dp"
            android:paddingEnd="5dp"
            android:textSize="16sp"
            android:hint="@string/ödemepopup2"
            android:layout_marginBottom="5dp"
            android:background="@drawable/edittextbg"/>
        <EditText
            android:id="@+id/edtodemetel"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:paddingStart="10dp"
            android:paddingEnd="5dp"
            android:textSize="16sp"
            android:hint="@string/ödemepopup2"
            android:layout_marginBottom="5dp"
            android:inputType="phone"
            android:background="@drawable/edittextbg"/>
        <EditText
            android:id="@+id/edtodemehesapno"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:paddingStart="10dp"
            android:paddingEnd="5dp"
            android:textSize="16sp"
            android:hint="@string/ödemepopup4"
            android:layout_marginBottom="5dp"
            android:background="@drawable/edittextbg"/>
        <EditText
            android:id="@+id/edtodemeozelnot"
            android:layout_width="250dp"
            android:layout_height="100dp"
            android:paddingStart="10dp"
            android:paddingEnd="5dp"
            android:textSize="16sp"
            android:inputType="textLongMessage"
            android:hint="@string/ödemepopup5"
            android:background="@drawable/edittextbg"/>
    </LinearLayout>
    <Button
        android:id="@+id/btnodemeonay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ödemepopup6"
        android:layout_marginTop="10dp"
        android:background="@drawable/answerbggreen"/>
</LinearLayout>