<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splashbg"
    tools:context=".activity.YatirKazan">
    <LinearLayout
        android:id="@+id/lytkatilimsayisi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:gravity="center"
        android:background="@drawable/cekilisekatil">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:textSize="20dp"
            android:textStyle="bold"
            android:text="@string/activityyatirkazan1"/>
        <TextView
            android:id="@+id/txtkatilimsayisi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textStyle="bold"
            android:text="0"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/sloganbg"
        android:padding="5dp"
        android:layout_below="@+id/lytkatilimsayisi">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="15sp"
            android:text="@string/activityyatirkazan2"/>
        <TextView
            android:id="@+id/txtcekilistarih"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text=" "/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="3dp"
        android:background="@drawable/cerclebackground"
        android:layout_below="@+id/lytkatilimsayisi"
        android:layout_marginEnd="10dp"
        android:layout_alignParentRight="true">
        <Button
            android:id="@+id/btnyatirkazanbilgilendirici"
            android:layout_width="26dp"
            android:layout_height="31dp"
            android:background="@drawable/ic_live_help_black_24dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_marginBottom="10dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/gorevyapbutonturkuaz"
        android:layout_above="@+id/lythavuzcoin">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/txtyatirkatilmasayiniz"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:textStyle="bold"
                android:text="@string/activityyatirkazan3"/>

            <TextView
                android:id="@+id/txtuserkatilimsayisi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="0"
                android:textColor="@color/red"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/activityyatirkazan4"/>
            <TextView
                android:id="@+id/txtusercikmaolasiligi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/red"
                android:textStyle="bold"
                android:text="0"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/lythavuzcoin"
        android:layout_width="189dp"
        android:layout_height="189dp"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:elevation="10dp"
        android:orientation="vertical"
        android:background="@drawable/kenarlimavidaire">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:layout_marginBottom="10dp"
            android:text="@string/activityyatirkazan5"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="22dp"
                android:layout_height="25dp"
                android:layout_marginEnd="4dp"
                android:layout_gravity="center"
                android:background="@drawable/homepuanturuncu"/>
            <TextView
                android:id="@+id/txthavuzcoin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="0"/>
        </LinearLayout>
        <TextView
            android:id="@+id/havuztl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text=" "/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/lytcekilissonucu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_margin="10dp"
        android:gravity="center"
        android:visibility="invisible"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/gorevyapbutonturkuaz">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/activityyatirkazan6"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/lytcekilisekatil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_margin="10dp"
        android:gravity="center"
        android:visibility="visible"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/gorevyapbutonturkuaz">
        <TextView
            android:id="@+id/eklenececoin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text=" "/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:textStyle="bold"
            android:text="@string/activityyatirkazan7"/>
    </LinearLayout>
</RelativeLayout>