<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/answerbg"
    android:layout_margin="5dp"
    android:orientation="vertical"
    android:padding="10dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_weight="1">
        <TextView
            android:id="@+id/txtodemeisim1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_centerVertical="true"
            android:text=" "/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="10sp"
                android:textStyle="bold"
                android:layout_marginEnd="5dp"
                android:text="@string/singleodenmis1"/>
            <TextView
                android:id="@+id/txtodemetarih1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="10sp"
                android:textStyle="bold"
                android:text=""/>
        </LinearLayout>

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_marginEnd="5dp"
                android:text="@string/singleodenmis2"/>
            <TextView
                android:id="@+id/txtodemefiyat1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textStyle="bold"
                android:text="30"/>
        </LinearLayout>
        <Button
            android:id="@+id/btnodeme1"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:padding="5dp"
            android:layout_marginTop="5dp"
            android:textSize="11sp"
            android:layout_alignParentEnd="true"
            android:background="@drawable/answerbggreen"
            android:text="@string/singleodenmis3"/>
    </RelativeLayout>
</LinearLayout>